--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
+    - "2.7"
+    - "3.4"
+before_install:
+    - sudo apt-get update -qq
+    - sudo apt-get build-dep -qq python-pygame
+    - sudo apt-get install -qq python-pygame
+virtualenv:
+    system_site_packages: true
 install:
-  - pip install -r travis-requirements.txt
-# command to run tests
+    - pip install -r requirements.txt
 #script: nosetests
