--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
     - "2.7"
-    - "3.4"
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get build-dep -qq python-pygame
@@ -10,4 +9,5 @@ virtualenv:
     system_site_packages: true
 install:
     - pip install -r requirements.txt
-#script: nosetests
+script:
+    - nosetests
