--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ virtualenv:
 install:
     - pip install -r requirements.txt
 script:
-    - nosetests
+    - nosetests --with-coverage
+after_success:
+    - coveralls
