--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ virtualenv:
 install:
     - pip install -r requirements.txt
 script:
-    - nosetests --with-coverage
+    - py.test
 after_success:
     - coveralls
