--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 SimpleGUICS2Pygame==1.9.0
-nose==1.3.7
-coverage==3.7.1
-python-coveralls==2.5.0
+pytest==2.7.1
+pytest-cov==1.8.1
+coveralls==1.0a2
