--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ virtualenv:
 install:
     - pip install -r requirements.txt
 script:
-    - py.test --cov-report term-missing
+    - nosetests --with-coverage
 after_success:
-    - coveralls
+    - coveralls --verbose
