--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ virtualenv:
 install:
     - pip install -r requirements.txt
 script:
-    - py.test --cov com.github.jfreedman.interactivepython --cov-report term-missing
+    - py.test --cov com/github/jfreedman/interactivepython --cov-report term-missing
 after_success:
     - coveralls
